# Lux-S2-neurips-public

./: CMakeLists.txt  README.md  compile.sh  create_submission.sh  sources.cmake
src/: agent.hpp  agent_act.cpp  agent_setup.cpp  main.cpp
src/lux/: action.cpp  action.hpp  board.cpp  board.hpp  cell.cpp  cell.hpp  defs.cpp  defs.hpp  exception.hpp  factory.cpp  factory.hpp  factory_group.cpp  factory_group.hpp  log.cpp  log.hpp  mode.cpp  mode.hpp  mode_default.cpp  mode_default.hpp  mode_ice_conflict.cpp  mode_ice_conflict.hpp  player.cpp  player.hpp  role.cpp  role.hpp  role_antagonizer.cpp  role_antagonizer.hpp  role_attacker.cpp  role_attacker.hpp  role_blockade.cpp  role_blockade.hpp  role_chain_transporter.cpp  role_chain_transporter.hpp  role_cow.cpp  role_cow.hpp  role_defender.cpp  role_defender.hpp  role_miner.cpp  role_miner.hpp  role_pillager.cpp  (+19 more)
